# MultiRobot-Planning-RMS

./: .gitignore  README.md
config/: px4_vehicles.yaml
docker/: Dockerfile  build.sh  config.env  kill.sh  start.sh
docker/px4_ros2_humble/docker/: Dockerfile_simulation-ubuntu22
docker/px4_ros2_humble/simulation/models/RealSense_D435/: model.sdf
docs/: bibliography.bib  main.tex
gz_px4/: CMakeLists.txt
gz_px4/airframes/: 4012_gz_x500_mod  CMakeLists.txt
gz_px4/gz_uwb_beacon_msgs/: CMakeLists.txt  package.xml
gz_px4/gz_uwb_beacon_msgs/models/uwb_beacon/: model.config
gz_px4/gz_uwb_beacon_msgs/models/x500_mod/: model.sdf
gz_px4/gz_uwb_beacon_msgs/msg/: EIFInput.msg  EIFOutput.msg  Measurement.msg
gz_px4/gz_uwb_beacon_plugin/: CMakeLists.txt  package.xml
gz_px4/gz_uwb_beacon_plugin/include/gz_uwb_beacon_plugin/: gz_uwb_beacon_plugin.h
gz_px4/gz_uwb_beacon_plugin/src/: gz_uwb_beacon_plugin.cpp
gz_px4/models/mono_cam_mod/: model.config  model.sdf
gz_px4/models/uwb_beacon/: model.sdf
gz_px4/models/x500_mod/: model.config  model.sdf
gz_px4/worlds/: warehouse.sdf
ros2_ws/src/multi_robot_planning_rms_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/multi_robot_planning_rms_msgs/msg/: Example.msg  ProcessStats.msg  Trajectory2D.msg
ros2_ws/src/multi_robot_planning_rms_msgs/srv/: DarpPetition.srv
ros2_ws/src/multi_robot_planning_rms_pkg/: package.xml  setup.cfg  setup.py
ros2_ws/src/multi_robot_planning_rms_pkg/config/: EIF_filter.yaml  coordinator.yaml  darp.yaml  drone_control.yaml  launch.yaml  mission.yaml  nodes.yaml  system.yaml  tf_manager.yaml
ros2_ws/src/multi_robot_planning_rms_pkg/launch/: run.launch.py  rviz.launch.py
ros2_ws/src/multi_robot_planning_rms_pkg/multi_robot_planning_rms_pkg/: EIF_filter_descentralized_node.py  EIF_filter_node.py  EIF_models.py  control_node.py  coordinator_node.py  darp_node.py  drone_control_node.py  original_darp_node.py  planning_node.py  px4_transform_node.py  tf_manager_node.py  visualization_node.py
ros2_ws/src/multi_robot_planning_rms_pkg/rviz/: default.rviz
ros2_ws/src/multi_robot_planning_rms_pkg/scripts/: Dependencies.sh  _ejemplo_llamada.sh  darp.py
ros2_ws/src/px4_ros_com/: CMakeLists.txt
ros2_ws/src/px4_ros_com/config/: sim_spawn.yaml  sim_spawn_multi.yaml
ros2_ws/src/px4_ros_com/launch/: sim_spawn.launch.py  sim_spawn_multi.launch.py  sim_spawn_multi_hete.launch.py
ros2_ws/src/px4_ros_com/scripts/: stop_sim.sh  takeoff_run.sh
ros2_ws/src/px4_ros_com/src/: config.rviz
ros2_ws/src/px4_ros_com/src/examples/listeners/: conversor.py
ros2_ws/src/px4_ros_com/src/examples/offboard/: offboard_control_multi.cpp
ros2_ws/src/px4_ros_com/src/examples/perimeter/: auction_participant.cpp  distributed_auctioneer.cpp
ros2_ws/src/px4_ros_com/src/examples/tests/: 4d_trajectory.py  4d_trajectory_timeopt.cpp  4d_trajectory_timeopt.py  4d_trajectory_timeopt_viz.py  CMakeLists.txt  check_collisions.py  coverage_path_planning_lawnmower.py  voronoys.py
tools/: generate_mission.py  hud.py  launch_px4_instances.py
